# crod-babylon-genesis

./: .directory-guard.sh  .env  .env.codespaces  .env.example  .gitignore  BUILD_STATUS.md  CLAUDE.md  CLAUDE_COORDINATION.json  CLEANUP-AND-ORGANIZE.sh  CLEANUP_MERGE_PLAN.md  CLEANUP_PLAN_JULY_2025.md  CLEAN_STRUCTURE.md  COMPLETE_DOCUMENTATION.md  CROD-2025-COMPLETE-ARCHITECTURE.md  CROD-2025-IMPLEMENTATION-ROADMAP.md  CROD-ACTUAL-CODE-INVENTORY-2025.md  CROD-ARCHITECTURE-CURRENT.md  CROD-BLOCKCHAIN-2025-ENHANCED.py  CROD-COMPLETE-ANALYSIS-2025-07-04.md  CROD-ELIXIR-BLOCKCHAIN-DESIGN.md  CROD-FINAL-STATUS.md  CROD_AUTO_START.sh  DEPLOY-EVERYTHING.sh  GITHUB-PRO-CODESPACES-JULY-2025.md  GITHUB-PUSH-READY.md  GITHUB-REPO-STRUCTURE.md  INSTALL-EVERYTHING.sh  INSTALL_SIMPLE.md  INSTANCE_EXECUTOR.py  INSTANCE_RUNNER.py  LEARNINGS.md  LICENSE  MIGRATION-CLEAN-REPO.sh  MULTI_INSTANCE_EXECUTOR.py  Makefile  NEW-STRUCTURE.md  NEW_GITIGNORE  NEW_README.md  ORGANIZATION_COMPLETE.md  POLYGLOT-CITY-README.md  (+45 more)
.claude/: settings.local.json
.crod-local/: crod-brain-v1.db  crod-brain.db  crod-daemon.db  test.db
.devcontainer/: devcontainer.json  first-steps.md  setup.sh  start-crod-auto.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
CROD_ULTIMATIV/: START_CROD_ULTIMATIV.sh
CURRENT-WORK-BACKUP/: README.md
advanced/: crod_deep_viz_api.html  crod_deep_viz_api.py  crod_fantasy_ui.py  crod_main.py  crod_ml.py  crod_patterns.py  crod_ultimate.js  crod_viz_plugin_bridge.py  test_plugins.py
blockchain-gui/: app.js  index.html  server.js  start-gui.sh
config/: crod-ultimate.json  nats-server.conf
crod-chain-app/: package-lock.json  package.json  start-dev.sh  tailwind.config.js
crod-claude-chat/: README-CROD.md  crod-claude-chat-0.1.0.vsix  crod-claude-chat-0.2.0.vsix  package-lock.json  package.json
crod-clean/: .gitignore  Cargo.toml  README.md  crod-worker.js  package.json  requirements.txt  start.sh
crod-clean/backend/elixir/: mix.exs
crod-clean/backend/elixir/lib/crod_clean/: ai_service.ex  application.ex
crod-clean/backend/python/: crod_web_studio.py
crod-clean/scripts/: start_all.sh
crod-clean/scripts/visualization/: crod_visualizer.py
crod-clean/src/ai/: crod_parasite.py  mcp-integration.py
crod-clean/src/core/: crod-claude-pingpong.js  crod-live-system.js  crod-neural-evolution.js  crod-persistence.js
crod-clean/src/core/distributed-systems/: crod-network-discovery.ex  crod-p2p-discovery-elixir.ex
crod-clean/src/performance/rust/: Cargo.toml  main.rs
crod-clean/src/visualization/: crod_art_studio.py  scientific_3d.py  technical_charts.py
crod-clean/src/web/: package.json
crod-clean/wasm/: crod-wasm-loader.js  index.html  server.js
crod-main/: .gitignore  README.md  README_ENHANCED.md  push_private_repo.sh
crod-phoenix-polyglot/: README.md
crod-polyglot-city-2025/: INSTALL.sh  MULTI_INSTANCE_EXECUTOR.py  README.md  deploy.sh  docker-compose.rathaus.yml  docker-compose.yml  setup-all.sh  start-city.sh  start-crod.sh  start.sh  test.sh
crod-polyglot-city-2025/crod-pattern-rust/: Cargo.toml  Dockerfile
crod-polyglot-city-2025/crod-pattern-rust/src/: main.rs  patterns.rs
crod-polyglot-city-2025/rust-pattern-district/: Cargo.toml  Dockerfile
crod-polyglot-city-2025/rust-pattern-district/src/: main.rs  nats_client.rs  pattern_engine.rs
crod_blockchain_elixir/: mix.exs
dashboard/: connection-map.html  crod-live-metrics.html  crod_dashboard.py  crod_tk_dashboard.py  metrics-server.js  package-lock.json  package.json  simple-api-server.js  simple-metrics.html  start-dashboard.sh  start-pyqt-dashboard.sh
data/: README.md
database/: crod-genesis-story.sql  init-crod-db.sql
desktop-app/: README.md
districts/: README.md
docs/: CRITICAL-2025-UPDATES.md  FREE-TOOLS-JULY-2025.md  GITHUB-SECRETS-SETUP.md  POLYGLOT-ARCHITECTURE.md  QUICK-START.md  START_CROD.md
go-memory/: Dockerfile  go.mod  main.go
go-memory-quarter/: Dockerfile  go.mod  main.go
hooks/: perfect-prompts.json
integrations/: activate-crod-steuer.sh  claude-hook.json  crod-chat-learner.js  crod-local-complete.js  crod-message-processor.js  crod-safe-hook.js  crod-session-manager.js  crod-session-saver.js  package-lock.json  package.json  ping-pong-engine.js  setup-crod-everywhere.sh
integrations/delta-tracker/: Cargo.toml  README.md  crod-delta-tracker.service  deploy.sh  haproxy.cfg  install-service.sh  nginx.conf  protocol.json  schema_simple.sql  start.sh
integrations/delta-tracker/js/: pattern_processor.js
integrations/delta-tracker/migrations/: 001_init.sql
integrations/delta-tracker/python/: crod_ml_processor.py
integrations/delta-tracker/src/: crod_interface.rs  delta_tracker.rs  key_database.rs  main.rs  ml_bridge.rs  models.rs
javascript-gateway/: package.json  server.js
js-gateway/: Dockerfile  package.json  server.js
k8s/: blockchain-core-deployment.yaml  crod-core.yaml  delta-quarter-deployment.yaml  delta-quarter.yaml  gateway-deployment.yaml  image-pull-secret.yaml  llama-district-deployment.yaml  llama-learning.yaml  memory-quarter-deployment.yaml  meta-chain-deployment.yaml  nats-jetstream.yaml  pattern-district-deployment.yaml  postgresql.yaml
knowledge/: COMPLETE-CROD-KNOWLEDGE-BASE.md  CROD-ARCHITECTURE-RESEARCH-2025.md  CROD-FUTURE-TECH-2025.md  INTEGRATION-NOTES.md
orchestration/: crod-master-orchestrator.py
phoenix-rathaus/: Dockerfile  mix.exs
pod-configs/: blockchain-chain.yaml  blockchain-core-deployment.yaml  complete-deployment.yaml  docker-compose-crod-brain.yml  ghcr-deployment.yaml  redis-cluster.yaml
pod-sources/pattern-district/: Cargo.toml  Dockerfile
pod-sources/pattern-district/src/: main.rs
polyglot/: README.md
polyglot/toml/: Cargo.toml
programme/: COPIED_FILES_SUMMARY.md
projects/: README.md
python-parasit/: Dockerfile  main.py  parasit.py  requirements.txt
rust-pattern/: Cargo.toml  Dockerfile
rust-pattern-district/: Cargo.toml  Dockerfile
rust-pattern-district/src/: analyzer.rs  main.rs  nats_handler.rs  patterns.rs
rust-pattern/src/: main.rs
scripts/: build-all.sh  (+28 more)
(+1057 files in other folders)
