[package]
name = "rust-pattern-district"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-nats = "0.33"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
regex = "1.10"
aho-corasick = "1.1"
rayon = "1.8"
dashmap = "5.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
futures = "0.3"
once_cell = "1.19"
prometheus = "0.13"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1