[package]
name = "crod-pattern-rust"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
nats = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
rayon = "1.8"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
prime_tools = "0.3"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1