[package]
name = "crod-pattern-district"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nats = "0.24"
regex = "1.10"
rayon = "1.8"
prometheus = "0.13"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = "0.3"