[package]
name = "crod-delta-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database - rusqlite with bundled SQLite
rusqlite = { version = "0.29", features = ["bundled", "serde_json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP Server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Command line parsing
clap = { version = "4.0", features = ["derive"] }

# For graceful shutdown
tokio-util = "0.7"
futures = "0.3"