[package]
name = "pattern-district"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
env_logger = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1