[package]
name = "crod-ultimativ"
version = "1.0.0"
description = "CROD ULTIMATIV - Everything is Blockchain"
authors = ["CROD"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "system-tray", "updater", "window-all", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

# GPU & Graphics
wgpu = "0.18"
winit = "0.29"

# Blockchain
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = "2.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "crod-ultimativ"
path = "src/main.rs"