[package]
name = "crod-performance"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
rayon = { workspace = true }
crossbeam = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
prometheus = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[features]
default = ["jemalloc"]
jemalloc = ["jemallocator"]
mimalloc = ["dep:mimalloc"]

[[bin]]
name = "crod-performance-server"
path = "main.rs"